# public-data-scraper

ai-job-assistant/: README.md  jobs.json  requirements.txt
ai-job-assistant/app/: config.py  llm.py  main.py  matcher.py  models.py  resume_parser.py  scraper.py  storage.py  v1_main.py
ai-job-assistant/app/prompts/: prompt_templates.py
ai-job-assistant/app/services/: extractor.py  matcher.py  rewriter.py  scorer.py
ai-job-assistant/tests/: test_matcher.py
ai-job-assistant/ui/: streamlit_app.py
fde/api_practice/day1/: api_practice.py  output.csv  readme.txt
fde/api_practice/day2/: api_practice.py
public-data-scraper/public-data-scraper/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
public-data-scraper/public-data-scraper/.github/workflows/: ci.yml
public-data-scraper/public-data-scraper/examples/: run_examples.py
public-data-scraper/public-data-scraper/public_data_scraper/: __init__.py  __main__.py  config.py  logging_config.py  registry.py  runner.py  schema.py
public-data-scraper/public-data-scraper/public_data_scraper/scrapers/: __init__.py  books_scraper.py  un_pdf_scraper.py  wikipedia_scraper.py  worldbank_scraper.py
public-data-scraper/public-data-scraper/tests/: test_core.py
